--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPA - Users</title>
     <script src="dist/bundle.js"></script>
+    <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
     <div id="app"></div>
